--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 </head>
 <body>
 
-    <div class="container text-center">
+  
         <div class="row">
           <div class="col">        
           </div>
 
-          <div class="col-6">
+          <div class="col">
             <h1>Product Catalogue</h1>
             <p id="productList"></p>
           </div>
-          
+
           <div class="col">    
           </div>
         </div>
-      </div>
+ 
 </body>
 <script src="js/app.js"></script>
 </html>
