--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Product Catalogue</title>
 </head>
 <body>
-    <div class="container text-center">
+    <div class="container">
         <div class="row">
           <div class="col">
           </div>
