--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="col">
           </div>
 
-          <div class="col">
+          <div class="col-5">
             <h1>Product Catalogue</h1>
             <p id="productList"></p>
           </div>
