--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <div class="col-lg-8 mx-auto p-3 py-md-5">
     <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
       <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-        <span class="fs-4">Starter template</span>
+        <span class="fs-4">IT28 - E Commerce</span>
       </a>
     </header>
-    <h1>Get started with Bootstrap</h1>
+    <h1>Simple Product Catalogue</h1>
     <p class="fs-5 col-md-8">Quickly and easily get started with Bootstrap's compiled, production-ready files with this barebones example featuring some basic HTML and helpful links. Download all our examples to get started.</p>
   
     <div class="mb-5">
