--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- Image and text -->
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo-shadow.png" width="30" height="30" class="d-inline-block align-top" alt="">
+    <img src="./img/thumb.png" width="30" height="30" class="d-inline-block align-top" alt="">
     Simple Product Catalogue
   </a>
 </nav>
